syntax = "proto3";


option java_package = "com.HyChat.server.Handle";

message  ResultMessage{

    bool Result=1;

    string Data=2;
}